--- a/BatchNormalization.ipynb
+++ b/BatchNormalization.ipynb
@@ -305,7 +305,7 @@
     }
    },
    "source": [
-    "<img src=\"https://raw.githubusercontent.com/cs231n/cs231n.github.io/master/assets/a2/batchnorm_graph.png\">"
+    "<img src=\"cs231n/notebook_images/batchnorm_graph2.png\" style=\"width: 400px; height: 600px;\">"
    ]
   },
   {
