--- a/ConvolutionalNetworks.ipynb
+++ b/ConvolutionalNetworks.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "a9d1b8e5",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2024-10-31T02:30:38.721328Z",
+     "start_time": "2024-10-31T02:30:38.332707Z"
     }
    },
-   "outputs": [],
    "source": [
     "# This mounts your Google Drive to the Colab VM.\n",
     "from google.colab import drive\n",
@@ -31,7 +33,21 @@
     "%cd /content/drive/My\\ Drive/$FOLDERNAME/cs231n/datasets/\n",
     "!bash get_datasets.sh\n",
     "%cd /content/drive/My\\ Drive/$FOLDERNAME"
-   ]
+   ],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'google'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# This mounts your Google Drive to the Colab VM.\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mgoogle\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcolab\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m drive\n\u001B[0;32m      3\u001B[0m drive\u001B[38;5;241m.\u001B[39mmount(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m/content/drive\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m      5\u001B[0m \u001B[38;5;66;03m# TODO: Enter the foldername in your Drive where you have saved the unzipped\u001B[39;00m\n\u001B[0;32m      6\u001B[0m \u001B[38;5;66;03m# assignment folder, e.g. 'cs231n/assignments/assignment2/'\u001B[39;00m\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'google'"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -1253,7 +1269,13 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "name": "python3",
+   "language": "python",
+   "display_name": "Python 3 (ipykernel)"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
