--- a/PyTorch.ipynb
+++ b/PyTorch.ipynb
@@ -355,7 +355,21 @@
     "\n",
     "Note that we have **no softmax activation** here after our fully-connected layer: this is because PyTorch's cross entropy loss performs a softmax activation for you, and by bundling that step in makes computation more efficient.\n",
     "\n",
-    "**HINT**: For convolutions: http://pytorch.org/docs/stable/nn.html#torch.nn.functional.conv2d; pay attention to the shapes of convolutional filters!"
+    "**HINT**: For convolutions: http://pytorch.org/docs/stable/nn.html#torch.nn.functional.conv2d; pay attention to the shapes of convolutional filters!\n",
+    "\n",
+    "### 简易版 PyTorch：三层卷积神经网络\n",
+    "\n",
+    "在这里，你将完成函数 `three_layer_convnet` 的实现，用于执行三层卷积神经网络的前向传播。与之前一样，我们可以直接通过传入零值来测试该网络的实现是否正确。该网络的架构如下：\n",
+    "\n",
+    "1. 一个卷积层（带偏置），具有 `channel_1` 个滤波器，每个滤波器的形状为 `KW1 x KH1`，并使用 2 的零填充；\n",
+    "2. ReLU 非线性激活；\n",
+    "3. 一个卷积层（带偏置），具有 `channel_2` 个滤波器，每个滤波器的形状为 `KW2 x KH2`，并使用 1 的零填充；\n",
+    "4. ReLU 非线性激活；\n",
+    "5. 一个带偏置的全连接层，用于生成 C 个类别的分数。\n",
+    "\n",
+    "请注意，这里在全连接层后**没有 softmax 激活**：这是因为 PyTorch 的交叉熵损失函数会自动进行 softmax 激活，这样处理可以使计算更加高效。\n",
+    "\n",
+    "**提示**：关于卷积操作的细节，请参考：[PyTorch 文档](http://pytorch.org/docs/stable/nn.html#torch.nn.functional.conv2d)；注意卷积滤波器的形状！"
    ]
   },
   {
@@ -392,6 +406,7 @@
     "    \"\"\"\n",
     "    conv_w1, conv_b1, conv_w2, conv_b2, fc_w, fc_b = params\n",
     "    scores = None\n",
+    "    print(conv_b1.shape)\n",
     "    ################################################################################\n",
     "    # TODO: Implement the forward pass for the three-layer ConvNet.                #\n",
     "    ################################################################################\n",
@@ -403,7 +418,7 @@
     "    ################################################################################\n",
     "    #                                 END OF YOUR CODE                             #\n",
     "    ################################################################################\n",
-    "    return scores"
+    "    return scores\n"
    ]
   },
   {
@@ -418,15 +433,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "f929a029",
    "metadata": {
     "tags": [
      "pdf-ignore-input"
     ],
-    "test": "barebones_output_shape"
+    "test": "barebones_output_shape",
+    "ExecuteTime": {
+     "end_time": "2024-11-04T13:32:53.727564Z",
+     "start_time": "2024-11-04T13:32:53.321312Z"
+    }
    },
-   "outputs": [],
    "source": [
     "def three_layer_convnet_test():\n",
     "    x = torch.zeros((64, 3, 32, 32), dtype=dtype)  # minibatch size 64, image size [3, 32, 32]\n",
@@ -443,7 +460,22 @@
     "    scores = three_layer_convnet(x, [conv_w1, conv_b1, conv_w2, conv_b2, fc_w, fc_b])\n",
     "    print(scores.size())  # you should see [64, 10]\n",
     "three_layer_convnet_test()"
-   ]
+   ],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 15\u001B[0m\n\u001B[0;32m     13\u001B[0m     scores \u001B[38;5;241m=\u001B[39m three_layer_convnet(x, [conv_w1, conv_b1, conv_w2, conv_b2, fc_w, fc_b])\n\u001B[0;32m     14\u001B[0m     \u001B[38;5;28mprint\u001B[39m(scores\u001B[38;5;241m.\u001B[39msize())  \u001B[38;5;66;03m# you should see [64, 10]\u001B[39;00m\n\u001B[1;32m---> 15\u001B[0m \u001B[43mthree_layer_convnet_test\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[1;32mIn[1], line 2\u001B[0m, in \u001B[0;36mthree_layer_convnet_test\u001B[1;34m()\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mthree_layer_convnet_test\u001B[39m():\n\u001B[1;32m----> 2\u001B[0m     x \u001B[38;5;241m=\u001B[39m \u001B[43mtorch\u001B[49m\u001B[38;5;241m.\u001B[39mzeros((\u001B[38;5;241m64\u001B[39m, \u001B[38;5;241m3\u001B[39m, \u001B[38;5;241m32\u001B[39m, \u001B[38;5;241m32\u001B[39m), dtype\u001B[38;5;241m=\u001B[39mdtype)  \u001B[38;5;66;03m# minibatch size 64, image size [3, 32, 32]\u001B[39;00m\n\u001B[0;32m      4\u001B[0m     conv_w1 \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39mzeros((\u001B[38;5;241m6\u001B[39m, \u001B[38;5;241m3\u001B[39m, \u001B[38;5;241m5\u001B[39m, \u001B[38;5;241m5\u001B[39m), dtype\u001B[38;5;241m=\u001B[39mdtype)  \u001B[38;5;66;03m# [out_channel, in_channel, kernel_H, kernel_W]\u001B[39;00m\n\u001B[0;32m      5\u001B[0m     conv_b1 \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39mzeros((\u001B[38;5;241m6\u001B[39m,))  \u001B[38;5;66;03m# out_channel\u001B[39;00m\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'torch' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -501,7 +533,7 @@
    "id": "1ccd6c49",
    "metadata": {},
    "source": [
-    "### Barebones PyTorch: Check Accuracy\n",
+    "醃### Barebones PyTorch: Check Accuracy\n",
     "When training the model we will use the following function to check the accuracy of our model on the training or validation sets.\n",
     "\n",
     "When checking accuracy we don't need to compute any gradients; as a result we don't need PyTorch to build a computational graph for us when we compute scores. To prevent a graph from being built we scope our computation under a `torch.no_grad()` context manager."
@@ -1242,7 +1274,13 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "name": "python3",
+   "language": "python",
+   "display_name": "Python 3 (ipykernel)"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
