--- a/Dropout.ipynb
+++ b/Dropout.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7bded7db",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# This mounts your Google Drive to the Colab VM.\n",
@@ -35,7 +39,10 @@
    "metadata": {
     "tags": [
      "pdf-title"
-    ]
+    ],
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "# Dropout\n",
@@ -51,7 +58,10 @@
    "metadata": {
     "tags": [
      "pdf-ignore"
-    ]
+    ],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -84,7 +94,10 @@
    "metadata": {
     "tags": [
      "pdf-ignore"
-    ]
+    ],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -97,7 +110,11 @@
   {
    "cell_type": "markdown",
    "id": "050d5e5a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Dropout: Forward Pass\n",
     "In the file `cs231n/layers.py`, implement the forward pass for dropout. Since dropout behaves differently during training and testing, make sure to implement the operation for both modes.\n",
@@ -109,7 +126,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "97c6428a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "np.random.seed(231)\n",
@@ -131,7 +152,11 @@
   {
    "cell_type": "markdown",
    "id": "07bfbf24",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Dropout: Backward Pass\n",
     "In the file `cs231n/layers.py`, implement the backward pass for dropout. After doing so, run the following cell to numerically gradient-check your implementation."
@@ -141,7 +166,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7dda920c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "np.random.seed(231)\n",
@@ -163,7 +192,10 @@
    "metadata": {
     "tags": [
      "pdf-inline"
-    ]
+    ],
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "## Inline Question 1:\n",
@@ -176,7 +208,11 @@
   {
    "cell_type": "markdown",
    "id": "d1fe69cc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Fully Connected Networks with Dropout\n",
     "In the file `cs231n/classifiers/fc_net.py`, modify your implementation to use dropout. Specifically, if the constructor of the network receives a value that is not 1 for the `dropout_keep_ratio` parameter, then the net should add a dropout layer immediately after every ReLU nonlinearity. After doing so, run the following to numerically gradient-check your implementation."
@@ -186,7 +222,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2d0bd04d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "np.random.seed(231)\n",
@@ -221,7 +261,11 @@
   {
    "cell_type": "markdown",
    "id": "4ec48fce",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Regularization Experiment\n",
     "As an experiment, we will train a pair of two-layer networks on 500 training examples: one will use no dropout, and one will use a keep probability of 0.25. We will then visualize the training and validation accuracies of the two networks over time."
@@ -232,7 +276,10 @@
    "execution_count": null,
    "id": "0fcf0062",
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -274,7 +321,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "abbdd52f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Plot train and validation accuracies of the two models.\n",
@@ -313,7 +364,10 @@
    "metadata": {
     "tags": [
      "pdf-inline"
-    ]
+    ],
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "## Inline Question 2:\n",
